# tectonic

./: .gitignore  Cargo.toml  PERFORMANCE.md  README.md  USAGE.md  bench_ycsb.sh  compare.py  insert_test.sh  kvbench_exp.sh  operations.md  plot.py  profile_cpu.sh  run_benchmark.sh  workload-gen-cli  workload_schema.json
kvbench-specs/: i.spec.json  ii.spec.json  iii.spec.json  iv.spec.json  v.spec.json
scale-specs/: 001m-complex.spec.json  001m.spec.json  005m-complex.spec.json  005m.spec.json  010m-complex.spec.json  010m.spec.json  050m-complex.spec.json  050m.spec.json  100m-complex.spec.json  100m.spec.json  generate_scale_specs.py
specs/: 10k_i__990k_pq.spec.json  1k_i__1k_pq.spec.json  1m_i.spec.json  1m_rq.spec.json  500k_i__500k_pq.spec.json  990k_i__10k_pq.spec.json  abruptly_shifting.spec.json  complex.spec.json  hkr.spec.json  hot_key.spec.json  insert_test_run.spec.json  interleave_wl.spec.json  kitchen-sink.spec.json  kl.spec.json  phase_workload.spec.json  sandbox.spec.json  (+4 more)
tectonic/: Cargo.toml  expanded.rs
tectonic/benches/: benchmark.rs  generate-bench-specs.py  generate-benchmark.py
tectonic/src/: keyset.rs  lib.rs  spec.rs
tectonic/test_specs/: 1m_i-1m_rq.json  1m_i.json  complex.json  deletes.json  empty.json  empty_point_queries.json  invalid_values.json  large.json  missing_properties.json  simple.json  wrong_types.json
tectonic/test_specs/benchmarks/: 100k_i-100_i_10k_rq.json  100k_i-1k_eqp.json  10k_i-100k_i_100_rq.json  10k_i-10k_i_10k_rq.json  1m_i-1m_i-1m_d.json  1m_i-1m_i_1m_pq.json  1m_i-1m_i_1m_u.json  1m_i-1m_rq.json
(+18 files in other folders)
