[package]
name = "tectonic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bloom = "0.3.2"
rand_distr = { version = "0.5.1", features = ["serde"] }
rand = { version = "0.9.1", features = ["serde"] }
rand_xoshiro = "0.7.0"
schemars = "1.0.0-alpha.21"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["serde_derive"] }
tracing.workspace = true

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
